	new file:   ZGame/DX9/dx9_swap_chains/dx9_swap_chains.sln
	new file:   ZGame/DX9/dx9_swap_chains/dx9_swap_chains.vcproj
	new file:   ZGame/DX9/dx9_swap_chains/resource.h
	new file:   ZGame/DX9/dx9_swap_chains/teapot.x
	new file:   ZGame/DX9/dx9_view_ports/codesampler.ico
	new file:   ZGame/DX9/dx9_view_ports/dx9_view_ports.cpp
	new file:   ZGame/DX9/dx9_view_ports/dx9_view_ports.exe
	new file:   ZGame/DX9/dx9_view_ports/dx9_view_ports.rc
	new file:   ZGame/DX9/dx9_view_ports/dx9_view_ports.sln
	new file:   ZGame/DX9/dx9_view_ports/dx9_view_ports.vcproj
	new file:   ZGame/DX9/dx9_view_ports/resource.h
	new file:   ZGame/DX9/dx9_view_ports/teapot.x

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015-09-05.22_31_38.31.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/07.09_38_01.03.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/07.15_22_04.90.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
green_screen.2015/09/10.13_19_39.67.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
